[gd_scene load_steps=7 format=3 uid="uid://w0vfe11fb8ui"]

[ext_resource type="Texture2D" uid="uid://bwb76r2d0ub8u" path="res://Assets/Enemies/Frigate.png" id="1_nehon"]
[ext_resource type="Script" path="res://actors/entities/Frigate.gd" id="2_i5t1g"]
[ext_resource type="AudioStream" uid="uid://rqyg6wryjs6x" path="res://Assets/sfx/enemy_kaboom.mp3" id="3_t84kl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ku6e3"]
size = Vector2(219.015, 66.3025)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbrio"]
bg_color = Color(0.509804, 0.498039, 0.505882, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7iol"]
bg_color = Color(0.6, 0.215686, 0.219608, 1)
skew = Vector2(0.8, 0)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[node name="Enemy" type="Sprite2D"]
position = Vector2(4.76837e-07, 9.09495e-13)
scale = Vector2(0.226094, 0.226094)
texture = ExtResource("1_nehon")
flip_h = true
script = ExtResource("2_i5t1g")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(7.25006, -4.42293)
scale = Vector2(1.601, 1.601)
shape = SubResource("RectangleShape2D_ku6e3")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.28212, -6.55755)
scale = Vector2(18.975, 2.4403)

[node name="Enemy_Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t84kl")
pitch_scale = 3.31
max_polyphony = 10

[node name="HP" type="ProgressBar" parent="."]
offset_left = -190.186
offset_top = 66.344
offset_right = 194.814
offset_bottom = 75.344
theme_override_styles/background = SubResource("StyleBoxFlat_qbrio")
theme_override_styles/fill = SubResource("StyleBoxFlat_b7iol")
value = 40.0
show_percentage = false

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AttackTimer2" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackTimer2" to="." method="_on_attack_timer_2_timeout"]
[connection signal="timeout" from="AttackTimer2" to="." method="_on_attack_timer_timeout"]
